--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,22 +511,23 @@ button {
 }
 
 .video-box {
-    position: relative;
-    max-width: 500px;
+position: relative;
+    max-width: 400px;
     width: 100%;
     margin: 1rem auto;
 }
 
 .video-box video {
-    width: 100%;
+        width: 99%;
+    position: absolute;
+    height: 100%;
 }
 
 .video-border {
-    position: absolute;
-    left: -1.5%;
-    top: -2%;
-    width: 103%;
-    height: 103%;
+       width: 100%;
+    /* height: 103%; */
+    z-index: 7;
+    position: relative;
 }
 
 @media (max-width:640px) {
